# rDataFrameLight

./: CMakeLists.txt  README.md
RDWorkspace/: PlotControl.h  SampleControl.h  Utility.h
Root/: CutControl.cxx  HistControl.cxx  PlotControl.cxx  SampleControl.cxx  SkimControl.cxx  Utility.cxx
json/: DiMuonSkim.json  MetricMuonSignalSkim.json  MetricMuonSkim.json  MetricMuonSkimDimuon.json  MinimumMuonSkim.json  MultiMinimumMuonCutCreate_pt17.json  MultiMinimumMuonCut_pt17_plot.json  MultiMinimumMuonKinematics.json  MultiMinimumMuonKinematics_plot.json  MuonBjetHistCreate.json  MuonBjetPlot.json  MuonCountCreate.json  MuonCountPlot.json  MuonHistCreate.json  MuonHistPlot.json  MuonHistSRCreate.json  MuonHistSRPlot.json  MuonHistTopCRCreate.json  MuonHistTopCRPlot.json  OSMuonKinematics.json  OSMuonKinematics_plot.json  OnlyOneMuonSkim.json  SSMinimumMuonKinematics.json  SSMinimumMuonKinematics_plot.json  SignalDiMuonSkim.json  SignalMinimumMuonSkim.json
json/AR_selection/: AR_Run2024C_medium.json  AR_RunIII2024Summer24NanoAODv15.json  AR_conept_Run2024C_medium.json  AR_relaxedJetDF_Run2024D_medium.json  AR_relaxedJetDF_Run2024E_medium.json  (+5 more)
rDataFrameLight/: CutControl.h  HistControl.h  PlotControl.h  SampleControl.h  SkimControl.h  Utility.h
script/: DYPostProcess_Zpt.py  JetVetoMap.C  JetVetoMap.py  Jetvetomap.py  MetricSkimmedFiles.py  MuonCorrection.C  MuonCorrection.py  MuonScaRe.cc  MuonScaReOrig.cc  PUWeight.C  PUWeight.py  RochesterCorrectionDataOrig.py  RochesterCorrectionMC.py  RochesterCorrectionOrig.py  RochesterCorrectionSignalOrig.py  RochesterCorrectiondata.py  ZPtcorrection.C  ZPtcorrection.py  checkTriggerEff.py  createFileList.py  postProcess.py  postProcess_Merging.py  reportPromptStats.py  splitPrompt.py  submit_completeBranches.sbatch
utils/: appendArray.cxx  collectHists.cxx  completeBranches.cxx  completeBranches_oneFile.cxx  computeBEff.cxx  plotHists.cxx  skimSamples.cxx
(+649 files in other folders)
